--- a/download.html
+++ b/download.html
@@ -16,7 +16,7 @@
 <br/>
 <br/>
 <br/>
-<p align="center"><a href="itms-services://?action=download-manifest&url=http://192.168.1.38/test.plist">click to download</a></p>
+<p align="center"><a href="itms-services://?action=download-manifest&url=https://github.com/alinmoon/filepot/blob/master/test.plist">click to download</a></p>
 <br/>
 <br/>
 </div>
